--- a/UnusedArchives/Lianes_4_paves_neutre/base.html.twig
+++ b/UnusedArchives/Lianes_4_paves_neutre/base.html.twig
@@ -17,14 +17,14 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block timetable_content %}
+{% block stop_timetable_content %}
     <div id="layout-1-wrapper" class="{% block additionnal_wrapper_class %}{% endblock %}">
         <div class="layout-container">
             <div id="header" class="clearfix">
-                {{ macros.img('header_route_sign', attribute(timetable.blocks, 'header_route_sign'), 'header_route_sign_img', 'route') }}
+                {{ macros.img('header_route_sign', attribute(stopTimetable.blocks, 'header_route_sign'), 'header_route_sign_img', 'route') }}
                 <div id="direction-title-wrapper" data-block-level="route" data-auto-filled="1">
-                    {% if timetable.title is defined %}
-                        {{ 'global.direction'|trans }} {{ timetable.title }}
+                    {% if stopTimetable.title is defined %}
+                        {{ 'global.direction'|trans }} {{ stopTimetable.title }}
                     {% endif %}
                 </div>
                 <div id="stop-point-title-wrapper" data-block-level="stop_point" data-auto-filled="1">
@@ -37,15 +37,15 @@
                 </div>
             </div>
             <div id="map-wrapper" class="clearfix">
-                {{ macros.img('line_map_block', attribute(timetable.blocks, 'line_map_block'), 'line_map_img', 'route') }}
+                {{ macros.img('line_map_block', attribute(stopTimetable.blocks, 'line_map_block'), 'line_map_img', 'route') }}
                 <div id="small-right-blocks">
                     {{ macros.season_validity('text_block_1', currentSeason, 'small-block') }}
-                    {{ macros.text('text_block_2', attribute(timetable.blocks, 'text_block_2'), 'route', 'small-block block') }}
+                    {{ macros.text('text_block_2', attribute(stopTimetable.blocks, 'text_block_2'), 'route', 'small-block block') }}
                     {{ macros.stop_point_pois('text_block_3', stopPoint, 'small-block') }}
                     {{ macros.stop_point_code('text_block_4', stopPoint, 'small-block') }}
                 </div>
             </div>
-            {% block timetable_downer_content %}{% endblock %}
+            {% block stop_timetable_downer_content %}{% endblock %}
         </div>
         <img class="divia-logo" src="{{ asset(imgPath ~ 'logo.png') }}">
     </div>
@@ -60,7 +60,7 @@
             'stopPointLevel'    : stopPointLevel,
             'externalNetworkId' : externalNetworkId,
             'blockTypes'        : blockTypes,
-            'timetable'         : timetable,
+            'timetable'         : stopTimetable,
             'stopPoint'         : stopPoint,
             'selector'          : '#layout-1-wrapper' }
     %}
