--- a/UnusedArchives/Proxi/proxi.html.twig
+++ b/UnusedArchives/Proxi/proxi.html.twig
@@ -2,7 +2,7 @@
 
 {% block additionnal_wrapper_class %}proxi-layout{% endblock %}
 
-{% block timetable_downer_content %}
+{% block stop_timetable_downer_content %}
     <div id="timetable_downer_content" class="clearfix">
         {%
             include templatePath ~ "leftOrangeBlock.html.twig"
@@ -12,7 +12,7 @@
         {% set addNotes = true %}
         {% for i in 1..3 %}
             {% set id = 'timegrid_block_' ~ i %}
-            {% set block = attribute(timetable.blocks, id) %}
+            {% set block = attribute(stopTimetable.blocks, id) %}
             {% set nbLines = 4 %}
             {% include "CanalTPMttBundle:Layouts:timegrid.html.twig" with {'addNotes': addNotes, 'nbLines' : nbLines} %}
         {% endfor %}
